Refactor PriorityStrategy: improve dispatch logic and logging, add groupByPriority utility, enhance test coverage; update ClusterHealthMonitor log levels to debug; unify test method access modifiers and static imports